--- a/package.json
+++ b/package.json
@@ -15,13 +15,29 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "@types/firebase": "^3.2.1",
+    "angular-datatables": "^7.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "angularfire2": "^5.1.1",
+    "animate.css": "^3.7.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
+    "firebase": "^5.8.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "ng2-validation": "^4.2.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -29,9 +45,11 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
+    "@types/datatables.net": "^1.10.14",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
